[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/quit_2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/quit.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/robo_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Levels/CameraBase.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Levels/level_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/robo_32.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/ui/button_2.png" type="Texture" id=9]
[ext_resource path="res://Scenes/SettingsPanel.gd" type="Script" id=10]
[ext_resource path="res://assets/ui/button_1.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/button_3.png" type="Texture" id=12]

[sub_resource type="NavigationMesh" id=9]
vertices = PoolVector3Array( -36, 1.58, -46.7, -47.7, 1.58, -46.7, -47.7, 1.58, -35.3, -47.7, 1.58, 34.9, -47.7, 1.58, 46.6, -36, 1.58, 46.6, 46.8, 1.58, -35.3, 46.8, 1.58, -46.7, 34.8, 1.58, -46.7, 34.8, 1.58, 46.6, 46.8, 1.58, 46.6, 46.8, 1.58, 34.9, -36, 1.58, -46.7, -47.7, 1.58, -35.3, -47.7, 1.58, -23.6, -24.3, 1.58, -46.7, 46.8, 1.58, -23.6, 46.8, 1.58, -35.3, 34.8, 1.58, -46.7, -47.7, 1.58, 23.2, -47.7, 1.58, 34.9, -36, 1.58, 46.6, -24.3, 1.58, 46.6, 34.8, 1.58, 46.6, 46.8, 1.58, 34.9, 46.8, 1.58, 23.2, 46.8, 1.58, -0.200001, 11.1, 1.58, -46.7, -0.599998, 1.58, -46.7, -47.7, 1.58, -0.200001, -0.599998, 1.58, 46.6, 11.1, 1.58, 46.6, 46.8, 1.58, -11.9, 23.1, 1.58, -46.7, 11.1, 1.58, -46.7, 46.8, 1.58, -0.200001, 46.8, 1.58, -23.6, 34.8, 1.58, -46.7, 23.1, 1.58, -46.7, 46.8, 1.58, -11.9, 23.1, 1.58, 46.6, 34.8, 1.58, 46.6, 46.8, 1.58, 23.2, 46.8, 1.58, 11.5, -24.3, 1.58, -46.7, -47.7, 1.58, -23.6, -47.7, 1.58, -11.9, -12.6, 1.58, -46.7, 11.1, 1.58, 46.6, 23.1, 1.58, 46.6, 46.8, 1.58, 11.5, 46.8, 1.58, -0.200001, -47.7, 1.58, 11.5, -47.7, 1.58, 23.2, -24.3, 1.58, 46.6, -12.6, 1.58, 46.6, -12.6, 1.58, -46.7, -47.7, 1.58, -11.9, -47.7, 1.58, -0.200001, -0.599998, 1.58, -46.7, -47.7, 1.58, -0.200001, -47.7, 1.58, 11.5, -12.6, 1.58, 46.6, -0.599998, 1.58, 46.6 )
polygons = [ PoolIntArray( 2, 1, 0 ), PoolIntArray( 5, 4, 3 ), PoolIntArray( 8, 7, 6 ), PoolIntArray( 11, 10, 9 ), PoolIntArray( 13, 12, 14 ), PoolIntArray( 14, 12, 15 ), PoolIntArray( 18, 17, 16 ), PoolIntArray( 20, 19, 21 ), PoolIntArray( 21, 19, 22 ), PoolIntArray( 23, 25, 24 ), PoolIntArray( 27, 26, 28 ), PoolIntArray( 28, 26, 31 ), PoolIntArray( 28, 31, 30 ), PoolIntArray( 28, 30, 29 ), PoolIntArray( 33, 32, 34 ), PoolIntArray( 34, 32, 35 ), PoolIntArray( 37, 36, 38 ), PoolIntArray( 38, 36, 39 ), PoolIntArray( 41, 40, 42 ), PoolIntArray( 42, 40, 43 ), PoolIntArray( 45, 44, 46 ), PoolIntArray( 46, 44, 47 ), PoolIntArray( 49, 48, 50 ), PoolIntArray( 50, 48, 51 ), PoolIntArray( 53, 52, 54 ), PoolIntArray( 54, 52, 55 ), PoolIntArray( 57, 56, 58 ), PoolIntArray( 58, 56, 59 ), PoolIntArray( 61, 60, 62 ), PoolIntArray( 62, 60, 63 ) ]
cell/height = 0.79
agent/height = 1.0
agent/radius = 1.0

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.109804, 0.8, 0.890196, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 5 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.733333, 0.152941, 1, 1 )

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )

[sub_resource type="Environment" id=13]
background_mode = 1
background_color = Color( 0.105882, 0.12549, 0.113725, 1 )
ambient_light_color = Color( 0.584314, 0.584314, 0.584314, 1 )
glow_enabled = true
glow_strength = 1.12
glow_bloom = 0.12

[sub_resource type="GIProbeData" id=12]
bounds = AABB( -225, -15, -237, 450, 30, 474 )
cell_size = 3.70312
to_cell_xform = Transform( 0.270042, 0, 0, 0, 0.270042, 0, 0, 0, 0.270042, 60.7595, 4.05063, 64 )
dynamic_data = PoolIntArray( 0, 8, 128, 16, 128, 1, 0, 0, 1101004800, 1086324736, 1065353216, 0, 1101004800, 1101004800, 1065353216, 1065353216, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7

[node name="TestLevel" type="Spatial"]
script = ExtResource( 1 )

[node name="Navigation" type="Navigation" parent="."]

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
navmesh = SubResource( 9 )

[node name="Level" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 6 )]

[node name="Team_1" type="Spatial" parent="."]

[node name="Team_2" type="Spatial" parent="."]

[node name="HudOverlay" type="CanvasLayer" parent="."]

[node name="Quit" type="TextureButton" parent="HudOverlay"]
margin_left = 1867.0
margin_top = 15.0
margin_right = 1907.0
margin_bottom = 55.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HudOverlay"]
margin_left = 733.0
margin_top = 38.0
margin_right = 773.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "team"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="HudOverlay"]
margin_left = 29.0
margin_top = 19.0
margin_right = 69.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 4 )
text = "FPS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="Panel" parent="HudOverlay"]
visible = false
margin_left = 64.0
margin_top = 43.0
margin_right = 1876.0
margin_bottom = 1006.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderLabel" type="Label" parent="HudOverlay/SettingsPanel"]
margin_left = 571.0
margin_top = 7.0
margin_right = 1224.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 14 )
text = "Game Settings"
align = 1

[node name="Back" type="TextureButton" parent="HudOverlay/SettingsPanel"]
margin_left = 1569.0
margin_top = 6.0
margin_right = 1807.0
margin_bottom = 97.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HudOverlay/SettingsPanel/Back"]
margin_left = 42.0
margin_top = 24.0
margin_right = 199.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 8 )
text = "Back
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphicslabel" type="Label" parent="HudOverlay/SettingsPanel"]
margin_left = 1484.0
margin_top = 198.0
margin_right = 1682.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 15 )
text = "Graphics"

[node name="Fullscreen" type="Label" parent="HudOverlay/SettingsPanel/Graphicslabel"]
margin_left = -60.0
margin_top = 120.0
margin_right = 89.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 8 )
text = "Fullscreen"

[node name="CheckButton" type="CheckButton" parent="HudOverlay/SettingsPanel/Graphicslabel/Fullscreen"]
margin_left = 264.0
margin_top = 1.0
margin_right = 340.0
margin_bottom = 41.0
pressed = true

[node name="Lighting" type="Label" parent="HudOverlay/SettingsPanel/Graphicslabel"]
margin_left = -56.0
margin_top = 207.0
margin_right = 93.0
margin_bottom = 245.0
custom_fonts/font = ExtResource( 8 )
text = "Lighting"

[node name="CheckButton" type="CheckButton" parent="HudOverlay/SettingsPanel/Graphicslabel/Lighting"]
margin_left = 264.0
margin_top = 1.0
margin_right = 340.0
margin_bottom = 41.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadows" type="Label" parent="HudOverlay/SettingsPanel/Graphicslabel"]
margin_left = -56.0
margin_top = 276.0
margin_right = 93.0
margin_bottom = 314.0
custom_fonts/font = ExtResource( 8 )
text = "Shadows"

[node name="CheckButton" type="CheckButton" parent="HudOverlay/SettingsPanel/Graphicslabel/Shadows"]
margin_left = 264.0
margin_top = 1.0
margin_right = 340.0
margin_bottom = 41.0
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HudOverlay/SettingsPanel"]
margin_left = 1348.0
margin_top = 234.0
margin_right = 1352.0
margin_bottom = 907.0

[node name="Spawns" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0 )

[node name="1" type="Spatial" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 145 )

[node name="MeshInstance" type="MeshInstance" parent="Spawns/1"]
visible = false
use_in_baked_light = true
mesh = SubResource( 4 )
material/0 = null

[node name="Pos1" type="Position3D" parent="Spawns/1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )

[node name="Pos2" type="Position3D" parent="Spawns/1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )

[node name="Pos3" type="Position3D" parent="Spawns/1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 5 )

[node name="Pos4" type="Position3D" parent="Spawns/1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 5 )

[node name="2" type="Spatial" parent="Spawns"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -145 )

[node name="MeshInstance" type="MeshInstance" parent="Spawns/2"]
visible = false
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = null

[node name="Pos1" type="Position3D" parent="Spawns/2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="Pos2" type="Position3D" parent="Spawns/2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 5 )

[node name="Pos3" type="Position3D" parent="Spawns/2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="Pos4" type="Position3D" parent="Spawns/2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 10 )

[node name="CameraBase" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="CameraBase"]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 55, 50 )
far = 1000.0

[node name="Draw" type="ImmediateGeometry" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="GIProbe" type="GIProbe" parent="."]
visible = false
extents = Vector3( 225, 15, 237 )
data = SubResource( 12 )

[node name="Lighting" type="Spatial" parent="."]

[node name="DirectionalLight" type="DirectionalLight" parent="Lighting"]
transform = Transform( 0.5, 0.75, -0.433013, -0.433013, 0.649519, 0.625, 0.75, -0.125, 0.649519, 17, 11, 13 )
light_energy = 0.5
light_specular = 2.682

[connection signal="pressed" from="HudOverlay/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="HudOverlay/SettingsPanel/Back" to="." method="_on_Settings_Back_pressed"]
[connection signal="toggled" from="HudOverlay/SettingsPanel/Graphicslabel/Fullscreen/CheckButton" to="HudOverlay/SettingsPanel" method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="HudOverlay/SettingsPanel/Graphicslabel/Lighting/CheckButton" to="HudOverlay/SettingsPanel" method="_on_Lighting_toggled"]
[connection signal="toggled" from="HudOverlay/SettingsPanel/Graphicslabel/Shadows/CheckButton" to="HudOverlay/SettingsPanel" method="_on_Shadows_toggled"]
